--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,8 @@
 Идея обобщённого программирования (\textsl{generic programming})
 состоит в том, чтобы увеличить гибкость языков программирования,
 расширяя возможности для параметризации программ типами данных.
-Термин \emph{обобщённое программирование} может иметь различное значение в зависимости от контекста. Говоря об
+Термин \emph{обобщённое программирование} может иметь различное
+значение в зависимости от контекста. Говоря об
 объектно-ориентированных языках, под ним понимают чаще всего
 параметрический полиморфизм в языках, основанных на системе типов
 Хиндли---Милнера, либо библиотеки обобщённых алгоритмов и
@@ -384,8 +385,8 @@ class Generic1 f where
 \ttfamily\small
 \textbf{data} Pair a b = Pair a b\\
 \\
-\textbf{instance} Generic1 (Pair Int) \textbf{where}\\
-\ind\textbf{type} Rep1 (Pair Int) = K Int :\tms: I\\
+\textbf{instance} Generic1 (Pair \textbf{Int}) \textbf{where}\\
+\ind\textbf{type} Rep1 (Pair \textbf{Int}) = K Int :\tms: I\\
 \ind ...
 \end{framed}
 \caption{Пример типа обобщённого представления функтора}
