Complete Section 2: Zippers

--- a/biblio.bib
+++ b/biblio.bib
@@ -77,3 +77,16 @@
     language = {english},
     url = {http://hackage.haskell.org/package/base-4.7.0.2/docs/GHC-Generics.html}
 }
+
+@ARTICLE{Ad2010,
+    author = {Michael D. Adams},
+    title = {Scrap Your Zippers: A Generic Zipper for Heterogeneous Types},
+    year = {2010},
+    journal = {The ACM SIGPLAN Workshop on Generic Programming}
+}
+
+@ONLINE{xmonad,
+    title = {xmonad, оконный менеджер, использующий зиппер},
+    language = {english},
+    url = {http://xmonad.org}
+}
