--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,7 @@
 расширяя возможности для параметризации программ типами данных.
 Термин \emph{обобщённое программирование} может иметь различное
 значение в зависимости от контекста. Говоря об
-объектно-ориентированных языках, под ним понимают чаще всего
+объектно"/ориентированных языках, под ним понимают чаще всего
 параметрический полиморфизм в языках, основанных на системе типов
 Хиндли---Милнера, либо библиотеки обобщённых алгоритмов и
 структур данных, метапрограммирование и так далее. Тем не менее,
@@ -35,7 +35,7 @@ programming})~\cite{Gib2007}, то есть о возможности перев
 данных на языке Haskell, описанный в статье~\cite{VriLoh2014} и
 реализованный в библиотеке \textsf{generics-sop}~\cite{generics-sop}.
 Исследуется возможность применения средств подхода в задаче
-построения зипперов~---~структур данных, используемых для
+построения зипперов~--- структур данных, используемых для
 эффективной, чисто функциональной навигации по древовидной
 структуре.
 
@@ -165,13 +165,13 @@ eq x y = geq (from x) (from y)
 \subsection{Алгебраические типы данных}
 
 Алгебраические типы данных
-(АТД, \textsl{algebraic data types})~---~основной механизм,
+(АТД, \textsl{algebraic data types})~--- основной механизм,
 использованный для реализации структур данных в функциональных
 языках программирования. Они определяются как составные типы,
 которые могут быть представлены в виде типов"/сумм из
 типов"/произведений. Тип"/произведение соответствует декартову
 произведению множеств значений типов, а тип"/сумма в теории
-множеств совпадает с дизъюнктивным, или размеченным,
+множеств совпадает с дизъюнктным, или размеченным,
 объединением, то есть множеством, элементами которого являются
 пары, состоящие из метки (соответствующей конструктору) и
 сопоставляемого с ней типа"/произведения (представляющего
@@ -179,11 +179,11 @@ eq x y = geq (from x) (from y)
 
 Приведём наиболее простые примеры алгебраических типов данных.
 Базовыми случаями являются единичный тип, то есть тип, состоящий
-из одного конструктора без аргументов, нулевой тип~---~тип, не
+из одного конструктора без аргументов, нулевой тип~--- тип, не
 имеющий конструкторов, и тип"/константа, единственный конструктор
 которого принимает один аргумент. Примеры таких типов
 представлены в листинге~\ref{list:base}. Слева от знака \texttts{=}
-стоят конструкторы типов, а справа~---~конструкторы значений.
+стоят конструкторы типов, а справа~--- конструкторы значений.
 Примеры элементарных типа"/суммы и типа"/произведения приведены
 в листингах~\ref{list:sum}--\ref{list:prod}.
 \begin{figure}[h]
@@ -239,7 +239,7 @@ data Const a = Const a
 определить обобщённое представление для любого типа, являющегося
 АТД. Определим, например, экземпляр класса \texttts{Generic}
 (см.~листинг~\ref{list:generic}) для типа
-\lstinline{Bool}~---~типа"/суммы двух единичных типов.
+\lstinline{Bool}~--- типа"/суммы двух единичных типов.
 
 Для того, чтобы построить обобщённое представление,
 соответствующее структуре типа \lstinline{Bool}, нам понадобится
@@ -300,29 +300,27 @@ data (a :+: b) = L a | R b
 Под термином \emph{функтор} в данной работе мы будем понимать
 отображение, определённое на типах. Заметим, что это соответствует
 теоретико"/категорному понятию функтора как отображения между
-категориями, если рассматривать типы как категории, где объектами
-типа \texttts{A} являются все возможные значения данного типа, а
-морфизмами функции типа \texttts{A~"/>~A}. Формальное
+категориями~--- областью и кообластью в данном случае будет категория \textbf{Hask} типов языка Haskell, таким образом функтор, действуя на типы, переводит их в другие типы~--- объекты этой категории. Формальное
 определение функтора в теории категорий также требует выполнения
-двух уравнений~---~сохранения единичного морфизма и композиции.
+двух уравнений, называемых в Haskell <<законами функтора>>,~--- сохранения единичного морфизма и композиции.
 Однако мы в рамках этой работы будем пользоваться нестрогим
 определением функтора и не требуем соблюдения этих свойств.
 
-С программистской точки зрения, функтор~---~это полиморфный тип,
+С программистской точки зрения, функтор~--- это полиморфный тип,
 то есть тип, параметризованный другим типом. В языке Haskell введён
-дополнительный уровень абстракции над типами~---~виды, или сорта,
+дополнительный уровень абстракции над типами~--- виды, или сорта,
 типов (\textsl{kinds})~\cite{Loh2015}. Вид \texttts{*} соответствует
 всем типам, значениями которых являются термы. Полностью
 применённая форма любого типа (если он параметризован),
 определённого через ключевое слово \lstinline{data}, имеет вид
-\texttts{*}. Если \texttts{k} и \texttts{l}~---~виды, то типы вида
+\texttts{*}. Если \texttts{k} и \texttts{l}~--- виды, то типы вида
 \texttts{l}, параметризованные типами вида \texttts{k}, будут иметь вид
 \texttts{k~"/>~l}.
 
-Например, типы \lstinline{Int} и список \lstinline{[Int]}~---~вида
-\texttts{*}, а тип \texttts{[]}~---~неприменённая форма
+Например, типы \lstinline{Int} и список \lstinline{[Int]}~--- вида
+\texttts{*}, а тип \texttts{[]}~--- неприменённая форма
 параметризованного типа списка, представленного в
-листинге~\ref{list:list},~---~вида \texttts{*~"/>~*}.
+листинге~\ref{list:list},~--- вида \texttts{*~"/>~*}.
 \begin{figure}[h]
 \begin{framed}
 \lstinline{data [] a = [] | a : [a]}
@@ -363,7 +361,7 @@ data (a :+: b) = L a | R b
 
 Для определения обобщённого представления функторов требуется
 также новый класс \texttts{Generic1} (листинг~\ref{list:generic1}), в
-котором тип \texttts{Rep~f} будет вида \texttts{*~"/>~*}. В
+котором тип \texttts{Rep1~f} будет вида \texttts{*~"/>~*}. В
 листинге~\ref{list:generic-pair} приводится в качестве примера
 представление функтора \lstinline{Pair Int}.
 \begin{figure}[h]
@@ -386,7 +384,7 @@ class Generic1 f where
 \textbf{data} Pair a b = Pair a b\\
 \\
 \textbf{instance} Generic1 (Pair \textbf{Int}) \textbf{where}\\
-\ind\textbf{type} Rep1 (Pair \textbf{Int}) = K Int :\tms: I\\
+\ind\textbf{type} Rep1 (Pair \textbf{Int}) = K \textbf{Int} :\tms: I\\
 \ind ...
 \end{framed}
 \caption{Пример типа обобщённого представления функтора}
@@ -404,6 +402,175 @@ class Generic1 f where
 
 \section{Зипперы}
 \label{sec:zippers}
+
+Многие эффективные алгоритмы, применяемые в императивном программировании, используют деструктивные операции над элементами структур данных. Однако в случае неизменяемой структуры сложность таких алгоритмов становится $\Theta\,(\log n)$ или $\Theta\,(n)$ при наивном решении, когда копируется всё дерево.
+
+Структура данных \emph{Зиппер}~--- эффективное решение задачи чисто функциональной навигации по древовидной структуре, предложенное Ж.~Юэ~\cite{Hue1997}. Задача формулируется как представление древовидной структуры данных вместе с фокусом на текущем узле, который может перемещаться влево, вправо, вниз и вверх по этой структуре.
+
+Решение состоит в построении производной структуры, содержащей фокус, который указывает на текущий узел, и хранящей путь, восходящий от него к корню дерева. Элементы чисто функциональной структуры, представленной таким образом, можно изменять за константное время.
+
+Зиппер является паттерном проектирования~\cite{Ad2010}, который можно использовать при реализации текстового редактора, где точкой фокуса будет текущее положение курсора, файловой системы (фокус~--- рабочий каталог), компилятора или интерактивного средства доказательства теорем. В качестве примера использования зиппера в промышленном ПО можно привести оконный менеджер \textsf{xmonad}~\cite{xmonad}.
+
+\subsection{Тип зиппера}
+
+Суть решения задачи навигации заключена в том, чтобы, выбирая направление для перемещения по дереву, на каждом уровне сохранять окружающий его \emph{контекст}, то есть все соседние для данного узлы. Тогда после каждого шага можно возвращаться вверх к корню, реализовав дополнительно функцию вставки (\textsl{plugging in}) узла в контекст. Путь к корню, таким образом, строится как список контекстов для каждого уровня дерева и выбранного направления.
+
+Рассмотрим следующий пример типа терма в абстрактном синтаксическом дереве некоторого языка (листинг~\ref{list:term-type}).
+
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+data Term = Var String
+          | Lambda String Term
+          | App Term Term
+          | If Term Term Term
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Тип терма}
+\label{list:term-type}
+\end{figure}
+
+Предположим, что у нас имеется построенное дерево с узлами этого типа, как показано в листинге~\ref{list:term}.
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+term :: Term
+term = If (Var "false")
+          (App (Lambda "x" (Var "x"))
+               (Var "38"))
+          (Var "13")
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Пример дерева разбора терма}
+\label{list:term}
+\end{figure}
+Значение \lstinline{term} является корнем этого дерева. Чтобы спуститься вниз от корня, сфокусировавшись, например, на подтерме со значением \lstinline{Var "x"}, для восстановления пути к корню требуется на первом шаге~--- опустившись до значения \texttts{App~(Lambda~\textquotedbl x\textquotedbl~(Var~\textquotedbl x\textquotedbl))~(Var~\textquotedbl 38\textquotedbl)}~--- сохранить окружающий контекст этого элемента, то есть левый и правый соседние узлы, затем сохранить, добавив в список, соседний узел подтерма \texttts{Lambda~\textquotedbl x\textquotedbl}~\lstinline{(Var "x")}~--- значение \lstinline{Var "13"}~--- и, наконец, на последнем шаге~--- константу \lstinline{"x"}, которая является контекстом для выбранного узла. 
+
+Тип зиппера для терма и составляющий его тип контекста, соответствующие реализации изложенной идеи, приведены в листингах~\ref{list:term-zipper}--\ref{list:term-ctx}. Индексы конструкторов контекста указывают на выбранное направление, то есть порядковый номер дочернего узла, пройденного на текущем уровне в пути от корня к фокусу.
+
+\begin{figure}[h]
+\begin{framed}
+\ttfamily\small
+\textbf{type} TermZipper = (Term, [TermContext])
+\end{framed}
+\caption{Тип зиппера для терма}
+\label{list:term-zipper}
+\end{figure}
+
+\begin{figure}[h]
+\begin{framed}
+\ttfamily\small
+\textbf{data} TermContext = Lambda$_\m{1}$ String\\
+\indN{~~~~~~~~~~~~~~~~~}| App$_\m{1}$ Term\\
+\indN{~~~~~~~~~~~~~~~~~}| App$_\m{2}$ Term\\
+\indN{~~~~~~~~~~~~~~~~~}| If$_\m{1}$ Term Term\\
+\indN{~~~~~~~~~~~~~~~~~}| If$_\m{2}$ Term Term\\
+\indN{~~~~~~~~~~~~~~~~~}| If$_\m{3}$ Term Term
+\end{framed}
+\caption{Тип контекста для терма}
+\label{list:term-ctx}
+\end{figure}
+
+\subsection{Дифференцирование типов данных}
+
+Получение типа контекста, как показывает К.~Макбрайд в статье~\cite{McBr2001},~--- чисто механический процесс, который можно выполнять, применяя к типу структуры данных, для которой требуется построить зиппер, набор математических преобразований, приведённый ниже. В записи данных формул $1$ и $0$ обозначают рассмотренные в разделе~\ref{sec:generic-prog} единичный и нулевой типы, а $S + T$ и $S \times T$ соответственно тип-сумму и тип-произведение (см.~листинги~\ref{list:base}--\ref{list:prod}).
+\begin{flalign}
+\partial_x x\quad &\mapsto\quad 1\\
+\partial_x C\quad &\mapsto\quad 0\\
+\partial_x (S + T)\quad &\mapsto\quad\partial_x S +\partial_x T\\
+\partial_x (S \times T)\quad &\mapsto\quad S\times\partial_x T + \partial_x F\times G\\
+\partial_x (S|_{y = T})\quad &\mapsto\quad\partial_x S|_{y = T} + \partial_y S|_{y = T}\times\partial_x T
+\end{flalign}
+
+Эти операции, которые можно использовать как список инструкций для автоматического построения типа контекста, похожи внешне на известные правила дифференцирования из математического анализа с тем отличием, что они определяются на типах. Для типа зиппера они сообщают нам, что
+\begin{enumerate}[(1)]
+  \item тип $x$ содержит один $x$ в тривиальном контексте,
+  \item константы не содержат $x$,
+  \item в $S + T$ можно найти $x$ либо в $S$, либо в $T$,
+  \item в $S \times T$ можно найти $x$ в $S$, пропуская $T$, либо в $T$, пропуская $S$,
+  \item подстановка выражения $T$ вместо переменной $y$ в формулу $S$.
+\end{enumerate}
+
+Предыдущий пример вывода типа контекста для терма с использованием приведённых правил записывается следующим образом.
+\begin{flalign*}
+\mathbf{term}\, &=\, C_{\mathbf{string}}+C_{\mathbf{string}}\times\mathbf{term}+\mathbf{term}^2+\mathbf{term}^3\\
+\mathbf{term'}\, &=\, C_{\mathbf{string}}+2\times\mathbf{term}+3\times\mathbf{term}^2
+\end{flalign*}
+
+Применение этих правил можно запрограммировать на уровне типов. В данной работе была поставлена задача их использования с техникой обобщённого программирования для автоматизации получения типа контекста зиппера. Далее будет показан ранее имеющийся подход к этой проблеме, а найденное решение, основывающееся на новых средствах, приводится в разделе~\ref{sec:generic-zippers-sop}.
+
+\subsection{Библиотека \textsf{multirec} и обобщённые зипперы}
+
+В библиотеке \textsf{multirec} реализован подход к обобщённому программированию типов данных, описанный в~\cite{MuRec2009}. Проблема доступа к рекурсивным элементам структуры данных, включающая задачи свёртки и обхода по значениям типа, имеющего рекурсивную структуру, и в том числе навигации с помощью зиппера, решается для \emph{регулярных типов}\footnote{В статье на самом деле выполняются построения для более сложного класса типов~--- \emph{взаимно рекурсивных}, однако в этой работе мы будем рассматривать только регулярные типы как их частный случай.}, подмножества алгебраических типов данных, которые имеют представление в виде наименьшей неподвижной точки некоторого полиномиального выражения над типами.
+
+Тип \texttts{Term}, как показывает следующая запись, является регулярным типом.
+\begin{flalign*}
+\mathbf{term}\, &=\, C_{\mathbf{string}}+C_{\mathbf{string}}\times\mathbf{term}+\mathbf{term}^2+\mathbf{term}^3\\
+&=\, \mu x.\,C_{\mathbf{string}}+C_{\mathbf{string}}\times x+x^2+x^3
+\end{flalign*}
+
+Выражения такого вида могут быть представлены как функторы, параметризованные типом \texttts{x}, и далее мы будем называть их \emph{полиномиальными функторами}.
+
+В~\cite{MuRec2009} пользуются определением регулярного типа, чтобы ввести класс для обобщённого представления всех регулярных типов. Пусть для регулярного типа $a$ существует такой полиномиальный функтор $PF_a$, что
+\[a\,\cong\,\mu y.\,PF_a.\]
+
+Тогда, используя свойство наименьшей неподвижной точки $\mu y.\,F\,=\,F\,(\mu y.\,F)$, мы получаем изоморфизм типов
+\[a\,\cong\,\mu y.\,PF_a\,\cong\,PF_a\,(\mu y.\,PF_a)\,\cong\,PF_a\,(a).\]
+
+Класс регулярных типов, таким образом, определяется, как показано в листинге~\ref{list:reg}.
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+class Regular a where
+  type PF a :: * -> *
+  from      :: a -> PF a a
+  to        :: PF a a -> a
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Класс регулярных типов}
+\label{list:reg}
+\end{figure}
+
+Для обобщённого представления полиномиального функтора используются показанные в разделе~\ref{sec:generic-prog} типы-комбинаторы \texttts{K a}, \texttts{U}, \texttts{I}, \texttts{f~:+:~g} и \texttts{f~:\tms:~g} (см.~листинг~\ref{list:combinators}).
+
+Функции на уровне типов, вычисляющие тип контекста как производную заданного типа, в данном подходе описываются нижеприведённым образом (листинг~\ref{list:ctx}).
+\begin{figure}[h]
+\begin{framed}
+\ttfamily\small
+\textbf{data family} Context (f :: * -> *) a\\
+\\
+\textbf{data instance} Context (K b)~~~~~a\\
+\textbf{data instance} Context U~~~~~~~~~a\\
+\textbf{data instance} Context I~~~~~~~~~a = CI\\
+\textbf{data instance} Context (f :+: g) a = CL (Context f a)\\
+\indN{~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}| CR (Context g a)\\
+\textbf{data instance} Context (f :\tms: g) a = C1 (Context f a) (g a)\\
+\indN{~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~}| C2 (f a) (Context g a)
+\end{framed}
+\caption{Вычисление типа контекста}
+\label{list:ctx}
+\end{figure}
+
+В библиотеке также введён класс \texttts{Zipper}, предоставляющий ряд функций для навигации по структуре, а определение типа фокуса (\textsl{location}) выглядит, как в листинге~\ref{list:loc}.
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+data Loc a where
+  Loc :: (Regular a, Zipper (PF a) a)
+         => a -> [Context (PF a) a] -> Loc a
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Тип фокуса}
+\label{list:loc}
+\end{figure}
 
 \section{Обобщённое программирование с \textsf{generics-sop}}
 \label{sec:generics-sop}
