--- a/preamble.tex
+++ b/preamble.tex
@@ -12,11 +12,14 @@
 	{Verb}{Verbatim}
 	{fontsize=\small}
 
+\usepackage[T1]{fontenc}
+
 \DeclareMathAlphabet{\m}{T1}{PTMono-TLF}{m}{n}
 \DeclareMathAlphabet{\mb}{T1}{PTMono-TLF}{b}{n}
 \DeclareMathAlphabet{\mi}{T1}{PTMono-TLF}{m}{it}
 
 \newcommand{\ind}{$\hphantom{~~}$}
+\newcommand{\indN}[1]{$\hphantom{#1}$}
 \newcommand{\texttts}[1]{{\ttfamily\small #1}}
 \newcommand{\tms}{\hspace{-0,45mm}$\times$\hspace{-0,45mm}}
 
