--- a/biblio.bib
+++ b/biblio.bib
@@ -90,3 +90,17 @@
     language = {english},
     url = {http://xmonad.org}
 }
+
+@ARTICLE{WeJo2012,
+    author = {Stephanie Weirich and Brent A. Yorgey and Julien Cretin and Simon Peyton Jones and Dimitrios Vytiniotis},
+    title = {Giving Haskell a Promotion},
+    year = {2012},
+    journal = {The ACM SIGPLAN Workshop on Types in Language Design and Implementation}
+}
+
+@ARTICLE{GGP2014,
+    author = {José Pedro Magalhães and Andres Löh},
+    title = {Generic Generic Programming},
+    year = {2014},
+    journal = {International Symposium on Practical Aspects of Declarative Languages}
+}
