--- a/main.tex
+++ b/main.tex
@@ -61,9 +61,7 @@ programming})~\cite{Gib2007}, то есть о возможности перев
 
 В разделе~\ref{sec:generics-sop} представлен обзор возможностей
 библиотеки \textsf{generics-sop}: описываются идеи и особенности
-нового подхода к обобщённому программированию, приводится
-несколько примеров описания обобщённых функций с помощью
-\textsf{generics-sop}.
+нового подхода к обобщённому программированию, обсуждаются преимущества предлагаемой формы структурного представления типов и техники перевода старого представления в новое.
 
 В результате исследования получен механизм, позволяющий
 автоматизировать процесс построения обобщённого представления
@@ -396,9 +394,7 @@ class Generic1 f where
 рассмотренном подходе для этого не существует другой возможности.
 Такой способ принят в старой технологии обобщённого
 программирования \textsf{GHC generics}~\cite{ghc-generics},
-реализованной в компиляторе \textsf{GHC}. В
-разделе~\ref{sec:generics-sop} будет показано, что новый подход
-избавлен от этого недостатка.
+реализованной в компиляторе \textsf{GHC}.
 
 \section{Зипперы}
 \label{sec:zippers}
@@ -505,7 +501,7 @@ term = If (Var "false")
 
 \subsection{Библиотека \textsf{multirec} и обобщённые зипперы}
 
-В библиотеке \textsf{multirec} реализован подход к обобщённому программированию типов данных, описанный в~\cite{MuRec2009}. Проблема доступа к рекурсивным элементам структуры данных, включающая задачи свёртки и обхода по значениям типа, имеющего рекурсивную структуру, и в том числе навигации с помощью зиппера, решается для \emph{регулярных типов}\footnote{В статье на самом деле выполняются построения для более сложного класса типов~--- \emph{взаимно рекурсивных}, однако в этой работе мы будем рассматривать только регулярные типы как их частный случай.}, подмножества алгебраических типов данных, которые имеют представление в виде наименьшей неподвижной точки некоторого полиномиального выражения над типами.
+В библиотеке \textsf{multirec} реализован подход к обобщённому программированию типов данных, описанный в~\cite{MuRec2009}. Проблема доступа к рекурсивным элементам структуры данных, включающая задачи свёртки и обхода по значениям типа, имеющего рекурсивную структуру, и в том числе навигации с помощью зиппера, решается для \emph{регулярных типов}\footnote{В статье выполняются построения для более сложного класса типов~--- \emph{взаимно рекурсивных}, однако в этой работе мы будем рассматривать только регулярные типы как их частный случай.}, подмножества алгебраических типов данных, которые имеют представление в виде наименьшей неподвижной точки некоторого полиномиального выражения над типами.
 
 Тип \texttts{Term}, как показывает следующая запись, является регулярным типом.
 \begin{flalign*}
@@ -537,7 +533,7 @@ class Regular a where
 \label{list:reg}
 \end{figure}
 
-Для обобщённого представления полиномиального функтора используются показанные в разделе~\ref{sec:generic-prog} типы-комбинаторы \texttts{K a}, \texttts{U}, \texttts{I}, \texttts{f~:+:~g} и \texttts{f~:\tms:~g} (см.~листинг~\ref{list:combinators}).
+Для обобщённого представления полиномиального функтора используются показанные в разделе~\ref{sec:generic-prog} типы"/комбинаторы \texttts{K a}, \texttts{U}, \texttts{I}, \texttts{f~:+:~g} и \texttts{f~:\tms:~g} (см.~листинг~\ref{list:combinators}).
 
 Функции на уровне типов, вычисляющие тип контекста как производную заданного типа, в данном подходе описываются нижеприведённым образом (листинг~\ref{list:ctx}).
 \begin{figure}[h]
@@ -572,8 +568,193 @@ data Loc a where
 \label{list:loc}
 \end{figure}
 
+Недостаток реализации \textsf{multirec} заключается в необходимости вручную переводить тип в регулярное представление или обращаясь к метапрограммному средству \textsf{Template Haskell}, предоставляющему на этапе компиляции возможности изменения синтаксического дерева программы. Представленный в следующем разделе подход~\cite{VriLoh2014} поддерживает более удобные и выразительные средства обобщённого программирования и позволяет генерировать код обобщённого представления типа автоматически.
+
 \section{Обобщённое программирование с \textsf{generics-sop}}
 \label{sec:generics-sop}
+
+Реализация библиотеки \textsf{generics-sop} основывается на результатах исследования~\cite{VriLoh2014} и использует новые расширения языка Haskell, появившиеся в последние годы, что позволяет писать данными средствами более удобный и выразительный обобщённый код.
+
+Данная библиотека предлагает новый стиль обобщённого представления типов данных в виде списочных структур, отличающийся от представления в большинстве используемых в данное время библиотек обобщённого программирования типов данных, подобного рассмотренному в предыдущих разделах,~--- как комбинации бинарных сумм и произведений с использованием множества частных структур~--- комбинаторов типов. В новом подходе каждый тип представляется как единая $N$"/арная сумма, где каждый компонент суммы~--- единое $N$"/арное произведение.
+
+Важным преимуществом нового представления является отделение метаданных от основного структурного представления типа, что делает конструкцию обобщённой структуры менее громоздкой, не содержащей лишней информации и более удобной в использовании, позволяющей писать чистый выразительный код.
+
+\subsection{\textsl{N}-арные суммы и произведения}
+
+Результатом исследования~\cite{VriLoh2014} является использование таких современных расширений системы типов Haskell, как \textsf{DataKinds, ConstraintKinds, PolyKinds} и другие, для формирования и обработки списков типов, кодирующих конечные суммы и произведения.
+
+Расширение \textsf{DataKinds}, впервые появившееся в статье~\cite{WeJo2012}, позволяет продвигать типы на более высокий уровень~--- видов типов, и таким образом даёт возможность определять новые виды, соответствующие типу данных. При этом конструкторы значений становятся конструкторами новых типов. Однако такие продвинутые (\textsl{promoted}) типы являются ненаселёнными, то есть не имеют конструкторов значений, и для того, чтобы строить термы с использованием этих типов, необходимо вводить структуры данных, предоставляющие для них конструкторы.
+
+В листингах~\ref{list:np}--\ref{list:ns} приводятся определения типов $N$"/арного произведения и $N$"/арной суммы. Эти типы параметризованы типом полиморфного вида \lstinline{[k]} (полиморфизм на уровне видов типов включается расширением \textsf{PolyKinds}), который получен продвижением типа списка.
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+data NP (f :: k -> *) (xs :: [k]) where
+  Nil  :: NP f '[]
+  (:*) :: f x -> NP f xs -> NP f (x ': xs)
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Тип $N$-арного произведения}
+\label{list:np}
+\end{figure}
+
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+data NS (f :: k -> *) (xs :: [k]) where
+  Z ::    f x  -> NS f (x ': xs)
+  S :: NS f xs -> NS f (x ': xs)
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Тип $N$-арной суммы}
+\label{list:ns}
+\end{figure}
+
+Конструкторы \texttts{S, Z, :*} и \texttts{Nil} создают значения этих типов, при добавлении элемента в сумму или произведение его тип заносится в список типов (здесь \texttts{'[]} и \texttts{':}~--- продвинутые версии конструкторов значений списка~--- для отличения их от обычных конструкторов списка в расширении \textsf{DataKinds} к ним добавляется знак \texttts{'}). Введённые структуры позволяют конструировать на уровне термов гетерогенные списки~--- списки, состоящие из значений разных типов.
+
+В листинге~\ref{list:np-example} показан пример гетерогенного списка, построенного с помощью конструкторов типа \texttts{NP}. $N$"/арная сумма (листинг~\ref{list:ns-example})~--- это выбор из списка.
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+hlist :: NP I '[String, Int, Char]
+hlist = I "ab" :* I 3 :* I 'x' :* Nil
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Пример гетерогенного списка --- $N$-арного произведения}
+\label{list:np-example}
+\end{figure}
+
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+type HChoice = NS I '[Char, Bool, Int, Bool]
+
+c0, c2 :: HChoice
+c0 = Z (I 'a')
+c2 = S (S (Z (I 13)))
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{$N$-арная сумма --- выбор из списка}
+\label{list:ns-example}
+\end{figure}
+
+\subsection{Класс \textsf{Generic} и автоматическая генерация обобщённого представления}
+
+Используя типы \texttts{NS} и \texttts{NP}, можно выразить структуру алгебраического типа данных в виде $N$"/арной суммы произведений. К примеру, обобщённое представление типа \texttts{Term} из раздела~\ref{sec:zippers} (см.~листинг~\ref{list:term-type}) будет выглядеть, как в листинге~\ref{list:rep-term}.
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+type RepTerm = NS (NP I)
+  '[ '[String]
+   , '[String, Term]
+   , '[Term, Term]
+   , '[Term, Term, Term]
+   ]
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Пример обобщённого представления типа}
+\label{list:rep-term}
+\end{figure}
+
+$N$"/арные произведения (внутренние списки типов) представляют наборы аргументов конструкторов, а выбор из суммы соответствует выбору конкретного конструктора.
+
+Класс \texttts{Generic} для всех типов, имеющих обобщённое представление такого вида, можно определить, как в листинге~\ref{list:generic-sop}, подобно тому, как было показано в разделе~\ref{sec:generic-prog}.
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+type Rep a = NS (NP I) (Code a)
+
+class Generic (a :: *) where
+  type Code a :: [[*]]  
+  from :: a -> Rep a
+  to   :: Rep a -> a
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Класс обобщённо представимых типов}
+\label{list:generic-sop}
+\end{figure}
+
+Функции \texttts{from} и \texttts{to} задают изоморфизм типов \texttts{a} и \texttts{Rep a} при условии, что их композиция является тождественным отображением, а \texttts{Code a}~--- список списков типов, кодирующий представление в виде $N$"/арной суммы произведений. Такой код позволяет устанавливать соответствие между типом данных и его обобщённым представлением, тем не менее это всё ещё необходимо делать вручную.
+
+Реализация класса \texttts{Generic} в библиотеке \textsf{generics-sop} более сложная~--- она автоматизирует процесс построения представления типа, используя собственный класс \texttts{Generic} компилятора \textsf{GHC} и переводя старое представление на основе комбинаторов в новое~--- в виде $N$"/арной суммы произведений. Код полного определения класса \texttts{Generic} из библиотеки \textsf{generics-sop} представлен в листинге~\ref{list:generics-sop-generic}.
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+class (All SListI (Code a)) => Generic (a :: *) where
+  type Code a :: [[*]]
+  type Code a = GCode a
+
+  from         :: a -> Rep a
+  default from :: (GFrom a, GHC.Generic a,
+                  Rep a ~ SOP I (GCode a))
+                  => a -> Rep a
+  from = gfrom
+
+  to         :: Rep a -> a
+  default to :: (GTo a, GHC.Generic a,
+                Rep a ~ SOP I (GCode a))
+                => Rep a -> a
+  to = gto
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Полное определение класса \texttts{Generic}}
+\label{list:generics-sop-generic}
+\end{figure}
+
+Функции \texttts{gfrom} и \texttts{gto} определены в библиотеке \textsf{generics-sop}~--- они реализуют технику, известную как \textsl{generic generic programming}~\cite{GGP2014}. Это техника перевода одних форм обобщённого представления типов данных в другие, что обеспечивает максимальную гибкость при использовании различных средств обобщённого программирования, применение которых можно комбинировать в одной программе, и это также является одним из преимуществ нового подхода.
+
+Ниже приводится пример определения типа данных (листинг~\ref{list:bin-tree}) и автоматически генерируемого для него кода обобщённого представления. Строка \lstinline{deriving GHC.Generic} средствами компилятора создаёт для типа экземпляр класса \texttts{GHC.Generic}, а строка \lstinline{instance Generic (BinTree a)} преобразуется в следующий код (листинг~\ref{list:generic-bin-tree}).
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+data BinTree a = Leaf a | Node (BinTree a) (BinTree a)
+  deriving GHC.Generic
+
+instance Generic (BinTree a)
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Определение АТД бинарного дерева}
+\label{list:bin-tree}
+\end{figure}
+
+\begin{figure}[h]
+\begin{framed}
+\vspace{-0.25cm}
+\begin{lstlisting}
+instance Generic (BinTree a) where
+  type Code (BinTree a) = '[ '[a]
+                           , '[BinTree a, BinTree a]
+                           ]
+                           
+  from :: BinTree a -> Rep (BinTree a)
+  from (Leaf x)   = SOP (Z (I x :* Nil))
+  from (Node l r) = SOP (S (Z (I l :* I r :* Nil)))
+  
+  to :: Rep (BinTree a) -> BinTree a
+  to (SOP (Z (I x :* Nil)))            = Leaf x
+  to (SOP (S (Z (I l :* I r :* Nil)))) = Node l r
+\end{lstlisting}
+\vspace{-0.25cm}
+\end{framed}
+\caption{Автоматически генерируемый код обобщённого представления}
+\label{list:generic-bin-tree}
+\end{figure}
 
 \section{Реализация обобщённого зиппера}
 \label{sec:generic-zippers-sop}
@@ -601,9 +782,5 @@ data Loc a where
       \protect\addtolength{\protect\cftsecnumwidth}{\widthof{\appendixname\space{}}}%
   }%
 }
-
-\section{Пример работы программы}
-
-Здесь длинный листинг с примером работы.
 
 \end{document}
