--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,7 @@
 	{fontsize=\small}
 
 \usepackage[T1]{fontenc}
+\usepackage{textcomp}
 
 \DeclareMathAlphabet{\m}{T1}{PTMono-TLF}{m}{n}
 \DeclareMathAlphabet{\mb}{T1}{PTMono-TLF}{b}{n}
